# DuckPLPEG

./: .gitignore  CMakeLists.txt  gram.peg  interactive.cpp  main.gram  main.peg  parser.cpp  peglib.h  plsql.gram  readme.txt
examples/token/: x0.peg  x1.peg  x2.peg
examples/whitespace & word/: caveat.peg  x0.peg  x1.peg
grammars/: calc.peg  duckdb_grammar.peg  main.peg  temp.peg
test_files/: call_function.txt  call_statement.txt  case_statement.txt  continue_statement.txt  create_function.txt  declaration.txt  exception.txt  execute_statement.txt  for_query_statement.txt  for_statement.txt  foreach_statement.txt  if_statement.txt  inner_block.txt  loop_statement.txt  mixed_case.txt  plpgsql_statements.txt  return_statement.txt  searched_case_statement.txt  while_statement.txt
test_files/cursors /: fetch_cursor.txt  move_cursor.txt  open_cursor.txt
test_files/denis files/: bbox.sql  force.sql  global.sql  items.sql  late.sql  march.sql
